Fix parameters definitions panel content clipping on AddCase page

--- a/WebAPP/References/smartadmin/css/osy.css
+++ b/WebAPP/References/smartadmin/css/osy.css
@@ -657,9 +657,12 @@ li {
 }
 
 .dropdown-menu-extra-wide{
-    min-width: 1520px!important;
+    min-width: 0!important;
+    width: min(1520px, calc(100vw - 120px))!important;
+    max-width: calc(100vw - 120px)!important;
     z-index: 9000!important;
     padding: 20px!important;
+    overflow-x: auto;
     /* padding-top: 15px!important; */
 }
 
